--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL="http://localhost:4040"
 REACT_APP_API_USERS="https://jsonplaceholder.typicode.com"
+REACT_APP_API_MONGODB="http://localhost:5000"
