--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "web-vitals": "2.1.4"
   },
   "scripts": {
-    "start": "SET PORT=3030 && react-scripts start",
+    "start": "PORT=3030 react-scripts start",
+    "start-win": "SET PORT=3030 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
