--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "5.2.3",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
     "react-router-dom": "6.9.0",
