redux + axios - user listing

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_API_URL="http://localhost:4040"
-REACT_APP_API_USERS="https://jsonplaceholder.typicode.com"
-REACT_APP_API_MONGODB="http://localhost:5000"
+REACT_APP_NODE_ENV=development
+REACT_APP_API_URL=http://localhost:4040
+REACT_APP_API_USERS=https://jsonplaceholder.typicode.com
+REACT_APP_API_MONGODB=http://localhost:5000
