--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "axios": "1.4.0",
     "bootstrap": "5.2.3",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-datepicker": "^4.11.0",
+    "react-datepicker": "4.11.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
+    "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-scripts": "5.0.1",
+    "redux": "4.2.1",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.4.2",
     "web-vitals": "2.1.4"
   },
   "scripts": {
